# threads-cli

./: .gitignore  Cargo.toml  README.md  threads_api_cli_prd_correction.md
.claude/: settings.json
crates/threads-cli/: Cargo.toml
crates/threads-cli/src/: cli.rs  config.rs  main.rs  output.rs
crates/threads-cli/src/commands/: auth.rs  export.rs  ingest.rs  init.rs  mod.rs  search.rs  show.rs
crates/threads-core/: Cargo.toml
crates/threads-core/src/: error.rs  lib.rs  model.rs  provider.rs
crates/threads-ingest/: Cargo.toml
crates/threads-ingest/src/: lib.rs  normalizer.rs  orchestrator.rs  store_shim.rs
crates/threads-ingest/tests/: ingest_tests.rs
crates/threads-ingest/tests/fixtures/: me.json  me_threads.json  replies.json
crates/threads-manifest/: Cargo.toml
crates/threads-manifest/src/: lib.rs
crates/threads-provider-official/: Cargo.toml
crates/threads-provider-official/src/: auth.rs  client.rs  config.rs  dto.rs  lib.rs  provider.rs  token_store.rs
crates/threads-provider-web/: Cargo.toml  README.md
crates/threads-provider-web/src/: lib.rs
crates/threads-store/: Cargo.toml
crates/threads-store/src/: error.rs  lib.rs  migrations.rs  query.rs  store.rs  tests.rs
docs/: architecture.md
docs/reviews/: codex-adversarial-2026-04-24.md
manifests/: official_v1.toml
