[package]
name = "threads-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "threads-cli: ingest, model, search, and export Threads content"

[[bin]]
name = "threads-cli"
path = "src/main.rs"

[dependencies]
threads-core.workspace = true
threads-manifest.workspace = true
threads-provider-official.workspace = true
threads-store.workspace = true
threads-ingest.workspace = true

anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
csv.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
