[package]
name = "threads-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Normalizer + orchestration pipeline for threads-cli"

[dependencies]
threads-core.workspace = true
threads-store.workspace = true

async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
threads-core.workspace = true
