[package]
name = "threads-manifest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Versioned local API manifest parser for threads-cli"

[dependencies]
serde.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
