[package]
name = "threads-provider-official"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Official Threads Graph API (graph.threads.net) provider for threads-cli"

[dependencies]
threads-core.workspace = true
threads-manifest.workspace = true

async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
keyring.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
