[package]
name = "threads-provider-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "EXPERIMENTAL private threads.net/api/graphql adapter (disabled by default per PRD)"

[features]
default = []
# Feature-gate the entire provider. Opt in explicitly.
enabled = []

[dependencies]
threads-core.workspace = true

async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
